in contributing, please visit http://incubator.apache.org/uima/get-involved.html.


5. How to Report Issues

The Apache UIMA project uses JIRA for issue tracking.  Please report any 
issues you find at http://issues.apache.org/jira/browse/uima.


6. List of JIRA Issues Fixed in this Release

Release Notes - UIMA - Version 2.3S

** Bug
    * [UIMA-860] - Add source-style LICENSE and NOTICE files at "root"s of UIMA
    * [UIMA-990] - change POM description for annotator package POMs
    * [UIMA-1003] - update PearPackagingMavenPlugin dependency scope
    * [UIMA-1004] - update SimpleServer try out form 
    * [UIMA-1069] - Model file is not loaded correctly if tagger is deployed more than once in same AE
    * [UIMA-1071] - http connector fails with some Java implementations
    * [UIMA-1085] - Fix Sandbox NOTICE files
    * [UIMA-1106] - update OpenCalaisAnnotator with correct encodings
    * [UIMA-1108] - correct character offset for OpenCalais annotator
    * [UIMA-1154] - UIMA-AS extended tests hang when running with IBM JVM 1.6 service release 1
    * [UIMA-1193] - Tagger throws occasional NPE
    * [UIMA-1264] - Regex annotator goes into infinite loop on patterns that match the empty string
    * [UIMA-1374] - TikaAnnotator source code does not compile because of incorrect package declarations
    * [UIMA-1378] - Build of uimaj-examples project fails
    * [UIMA-1379] - Type system namespace should be org.apache.uima.tika, not just org.apache.uima
    * [UIMA-1384] - WhitespaceTokenizer pom still references UIMA 2.2.2
    * [UIMA-1385] - Regex annotator does not close concept file input stream after reading
    * [UIMA-1392] - OpenCalaisAnnotator's annotations have truncated 'coveredText' field
    * [UIMA-1403] - Lucas: many test cases fail
    * [UIMA-1446] - org.apache.uima.simpleserver.config.impl.SimpleFilterImpl.match() can cause a null pointer exception
    * [UIMA-1447] - Tabulations are annotated as tokens after a space