@@ -141,6 +141,7 @@ issues you find at
   
 <h2><a name="list.issues">6. List of JIRA Issues Fixed in this Release</a></h2>
 
+
         Release Notes - UIMA - Version 2.3S
         
 <h2>        Bug
@@ -239,6 +240,8 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1615'>UIMA-1615</a>] -         make build-from-sources work
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1639'>UIMA-1639</a>] -         Fixed bugs which disabled compiled dicts, static dict attributes
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1663'>UIMA-1663</a>] -         All directories in UIMA distribution should be 755
 </li>
 </ul>
     
@@ -349,9 +352,6 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1469'>UIMA-1469</a>] -         Add Lucas to the sandbox home page
 </li>
 </ul>
-
-
-
                         
 </body>
 </html>
